# swagger.yaml
@@ -4,6 +4,24 @@ info:
   description: "Endpoints para gerenciar categorias de despesas"
   version: "1.0.0"
 paths:
+  /login:
+    post:
+      summary: "Login do sistema"
+      parameters:
+        - in: body
+          name: body
+          required: true
+          schema:
+            properties:
+              username:
+                type: string
+                example: "João Chaulin matador de porco"
+              password:
+                type: string
+                example: "p@ssword"
+      responses:
+        201:
+          description: "Categoria criada com sucesso"
   /Expense/All:
     get:
       summary: "Recuperar todas as categorias de despesas"
